# hftirc2

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.h.in  port.h.in
src/: .#irc.c  CMakeLists.txt  hftirc.h
